# libnodeOTC

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  build  build.sh  libndbenadetta.sln  ndbenadetta.pc.in  node.cs
include/: config.hpp.in  ndbenadetta.hpp  ndbenadetta_block.hpp  ndbenadetta_block_entry.hpp  ndbenadetta_capi.hpp  ndbenadetta_node.hpp  node-otc.h
src/: ndbenadetta.cpp  ndbenadetta_block_entry.cpp  node-otc.c  node.cs
src/Block/: GenericBlockChain.cs  GenericBlockEntry.cs  GenericBlockOwnerList.cs
src/Collections/: ListNode.cs  ValueListNode.cs
